force-app/main/default/objects/Codify_Resolution_Log__c/Codify_Resolution_Log__c.object-meta.xml
<CustomObject>
    <description
  >The raw recap history. One record per fix a technician described to Codify, holding the verbatim recap, the extracted resolution summary and root cause, and whether a Knowledge draft came out of it. Every Change Log row traces back to one of these.</description>
    <label>Codify Resolution Log</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Resolution Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Codify Resolution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>