force-app/main/default/objects/Codify_Resolution_Log__c/fields/Article_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Article_Drafted__c</fullName>
    <label>Article Drafted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >True once Codify produced a Knowledge draft from this recap. A draft, never a published article.</description>
</CustomField>