force-app/main/default/objects/Codify_Resolution_Log__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Codify_Resolution_Logs</relationshipName>
    <relationshipLabel>Codify Resolution Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case this fix resolved.</description>
</CustomField>