force-app/main/default/objects/Codify_Resolution_Log__c/fields/Extraction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_JSON__c</fullName>
    <label>Extraction JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >The single cached parse of the recap. Every downstream topic reads this instead of re-parsing the text, which is what makes "one recap, multiple outputs" true in code rather than just in the pitch.</description>
</CustomField>