force-app/main/default/objects/Codify_Resolution_Log__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <label>Knowledge Article Id</label>
    <type>Text</type>
    <length>18</length>
    <description
  >Id of the Knowledge draft this recap produced, so the log links forward to the article awaiting review.</description>
</CustomField>