force-app/main/default/objects/Codify_Resolution_Log__c/fields/Logged_By_Technician__c.field-meta.xml
<CustomField>
    <fullName>Logged_By_Technician__c</fullName>
    <label>Logged By Technician</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Codify_Resolution_Logs</relationshipName>
    <relationshipLabel>Codify Resolution Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Who described the fix. For MIAW sessions this is the mapped portal or partner user.</description>
</CustomField>