force-app/main/default/objects/Codify_Resolution_Log__c/fields/Low_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Low_Confidence__c</fullName>
    <label>Low Confidence</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >The recap was too thin to classify confidently. Codify escalates to a human rather than forcing a guess, because a wrong root cause misdirects the Related Case Sweep.</description>
</CustomField>