force-app/main/default/objects/Codify_Resolution_Log__c/fields/Related_Cases_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Related_Cases_Flagged__c</fullName>
    <label>Related Cases Flagged</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description
  >How many other open Cases this fix was suggested onto by the Related Case Sweep.</description>
</CustomField>