force-app/main/default/objects/Codify_Resolution_Log__c/fields/Resolution_Recap__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Recap__c</fullName>
    <label>Resolution Recap</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >The technician's verbatim recap, exactly as dictated or pasted. Never rewritten, so a reviewer can always compare a drafted article against what was actually said.</description>
</CustomField>