force-app/main/default/objects/Codify_Resolution_Log__c/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >The extracted, cleaned-up summary of the fix that was written to the Case.</description>
</CustomField>