force-app/main/default/objects/Codify_Resolution_Log__c/fields/Root_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Category__c</fullName>
    <label>Root Cause Category</label>
    <type>Text</type>
    <length>255</length>
    <description
  >The taxonomy label matched from Codify_Root_Cause_Taxonomy__mdt. Free text rather than a picklist so the taxonomy stays configurable without a metadata change.</description>
</CustomField>