force-app/main/default/objects/Codify_Resolution_Log__c/fields/Root_Cause_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Confidence__c</fullName>
    <label>Root Cause Confidence</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description
  >How many distinct taxonomy keywords the recap matched, as a 0-1 score. Below the confidence floor Codify refuses to tag and escalates instead.</description>
</CustomField>