force-app/main/default/objects/Codify_Resolution_Log__c/fields/Root_Cause_Key__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Key__c</fullName>
    <label>Root Cause Key</label>
    <type>Text</type>
    <length>80</length>
    <description
  >The stable taxonomy key behind the label. The Related Case Sweep matches on this, not on the display label.</description>
</CustomField>