force-app/main/default/objects/Codify_Resolution_Log__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Internal Agent Console</fullName><default
        >false</default><label>Internal Agent Console</label></value>
            <value><fullName>Dictation</fullName><default>false</default><label
        >Dictation</label></value>
        </valueSetDefinition>
    </valueSet>
    <description
  >Where the recap came in from. Codify runs as an employee agent inside Salesforce, so this is normally the agent console; Dictation is kept for recaps captured by voice.</description>
</CustomField>