force-app/main/default/objects/Codify_Resolution_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Root_Cause_Category__c</columns>
    <columns>Article_Drafted__c</columns>
    <columns>Logged_By_Technician__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>