force-app/main/default/objects/Codify_Resolution_Log__c/listViews/By_Root_Cause.listView-meta.xml
<ListView>
    <fullName>By_Root_Cause</fullName>
    <columns>NAME</columns>
    <columns>Root_Cause_Category__c</columns>
    <columns>Root_Cause_Confidence__c</columns>
    <columns>Case__c</columns>
    <columns>Related_Cases_Flagged__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Root_Cause_Category__c</field>
        <operation>notEqual</operation>
        <value />
    </filters>
    <label>By Root Cause</label>
</ListView>