force-app/main/default/objects/Codify_Resolution_Log__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Root_Cause_Category__c</columns>
    <columns>Article_Drafted__c</columns>
    <columns>Low_Confidence__c</columns>
    <columns>Logged_By_Technician__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>